fixtures/uitests/tests/ui/interface_cannot_use_mut_self.stderr
error[E0308]: mismatched types
   --> $DIR/counter.uniffi.rs:161:32
    |
161 |                 Ok(ref val) => val,
    |                                ^^^ types differ in mutability
    |
    = note: expected mutable reference `&mut Counter`
                       found reference `&Arc<Counter>`
